@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libsmdev],
- [20141225],
+ [20141229],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
